Update Security Config